--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,9 @@ jobs:
           - macos-latest
     runs-on: ${{ matrix.os }}
     steps:
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.1'
       - name: asdf_plugin_test
         uses: asdf-vm/actions/plugin-test@v3
         with:
