install libyaml-dev

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '${{ matrix.ruby_version }}'
+      - name: install libyaml
+        if: "${{ matrix.os == 'ubuntu-latest' }}"
+        run: sudo apt-get install --yes libyaml-dev
       - name: asdf_plugin_test
         uses: asdf-vm/actions/plugin-test@v3
         with:
